Migrate Linux packaging from javapackager to jpackage
Replace fvarrui-javapackager-linux profile with jpackage-linux profile.
Three jpackage executions: APP_IMAGE, DEB, RPM (all from same app image).
Re-enable Linux CI build; add rpm package to build dependencies.